--- a/src/components/telas/TelasMessage/telas-message.module.scss
+++ b/src/components/telas/TelasMessage/telas-message.module.scss
@@ -4,7 +4,7 @@
   border-radius: 8px;
   padding: 24px 12px;
   grid-template:
-    'warn content'
+    'icon message'
     / 1fr 16fr;
   gap: 12px;
   margin: 6px 0;
